# nightshade-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
nightshade/: CMakeLists.txt  logging.h  nightshade.cpp  nightshade.h
